--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
+        "pbergman/tree-helper": "^1.0",
         "predis/predis": "^1.1",
         "proengsoft/laravel-jsvalidation": ">2.2.0"
     },
